# paloalto

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/superpowers/plans/: 2026-04-03-paloalto-implementation.md
docs/superpowers/specs/: 2026-04-03-paloalto-design.md
paloalto/: __init__.py  cli.py  data.py  knn_cache.py  utils.py
paloalto/agent/: judge.py
paloalto/embed/: __init__.py  ptsne.py  pumap.py  umap.py
paloalto/metrics/: __init__.py  batch.py  bio.py  lisi.py  scgraph.py
paloalto/optim/: bo.py  mobo.py  space.py
paloalto/report/: html.py
paloalto/report/templates/: report.html.j2
scripts/: interactive_heart.py
tests/: conftest.py  test_agent.py  test_api.py  test_cli.py  test_data.py  test_embed_ptsne.py  test_embed_pumap.py  test_metrics_batch.py  test_metrics_bio.py  test_metrics_integration.py  test_metrics_lisi.py  test_metrics_scgraph.py  test_optim_bo.py  test_optim_mobo.py  test_optim_space.py  test_report.py
trials/: ._report.html  report.html
trials/heart_claude_loop/: history.json
trials/heart_claude_loop/coords/: replicate_01_n45_d0.25.npy  replicate_02_n45_d0.25.npy  replicate_03_n45_d0.25.npy  trial_01_n15_d0.500_s42.npy  trial_01_n40_d0.150.npy  trial_01_n5_d0.010.npy  trial_02_n15_d0.100.npy  trial_02_n15_d0.300_s42.npy  trial_02_n30_d0.200.npy  trial_03_n30_d0.300.npy  trial_03_n30_d0.300_s42.npy  trial_03_n45_d0.250.npy  trial_04_n45_d0.250_s42.npy  trial_04_n50_d0.250.npy  (+10 more)
trials/heart_mrvi/: ._report.html  report.html
trials/heart_mrvi_umap/: report.html
trials/meniscus/: ._report.html  report.html
(+72 files in other folders)
