[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "paloalto"
version = "0.1.0"
description = "Pareto-guided Automatic Layout Optimization for Aligning Latent Topology in Omics embeddings"
requires-python = ">=3.10"
dependencies = [
    "anndata>=0.10",
    "scanpy>=1.9",
    "torch>=2.0",
    "botorch>=0.10",
    "numap>=0.2",
    "pynndescent>=0.5",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
    "jinja2>=3.1",
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
paloalto = "paloalto.cli:main"

[tool.setuptools.packages.find]
include = ["paloalto*"]

[tool.pytest.ini_options]
env = [
    "KERAS_BACKEND=numpy",
]
